add LoginFragment,coding ContractFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">策略期货</string>
+
     <string name="string_contract">合约</string>
     <string name="string_strategy">策略</string>
     <string name="string_transaction">交易</string>
@@ -7,4 +8,20 @@
 
     <string name="string_optional_shares">自选</string>
     <string name="string_edit">编辑</string>
+    <string name="string_search">搜索</string>
+    
+    <string name="contract_name">合约名</string>
+    <string name="contract_latest_price">最新价格</string>
+    <string name="contract_change">涨跌</string>
+
+    <string name="string_login">交易登录</string>
+    <string name="string_choose_server">选择服务器</string>
+    <string name="server_10000">电信</string>
+    <string name="server_10086">移动</string>
+    <string name="string_account">资金账号</string>
+    <string name="string_remember">记住</string>
+    <string name="string_password">密码</string>
+    <string name="password_show">可见</string>
+    <string name="string_validate_code">验证码</string>
+    <string name="action_sign_in">登录</string>
 </resources>
