coding user login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="string_login">交易登录</string>
     <string name="string_choose_server">选择服务器</string>
     <string name="server_10000">电信</string>
-    <string name="server_10086">移动</string>
+    <string name="server_10010">联通</string>
     <string name="string_account">资金账号</string>
     <string name="string_remember">记住</string>
     <string name="string_password">密码</string>
