--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="string_optional_shares">自选</string>
     <string name="string_edit">编辑</string>
     <string name="string_search">搜索</string>
-    
+
     <string name="contract_name">合约名</string>
     <string name="contract_latest_price">最新价格</string>
     <string name="contract_change">涨跌</string>
@@ -33,18 +33,24 @@
     <string name="strategy_op_add">新增</string>
 
 
-
     <string name="strategy_day">日均线趋势</string>
     <string name="strategy_hour">60分钟均线趋势</string>
     <string name="strategy_5min">5分钟均线趋势</string>
     <string name="strategy_min">1分钟MACD线趋势</string>
-    
+
     <string name="tendency_long">向上</string>
     <string name="tendency_short">向下</string>
     <string name="tendency_golden">金叉</string>
     <string name="tendency_dead">死叉</string>
 
     <string name="tendency_memo">"趋势向上：价格在均线以上，均线走势向上 \n趋势向下：价格在均线之下，均线走势向下 \n \n<xliff:g id="STRATEGY">%s</xliff:g>"</string>
+    <string name="title_activity_instrument">InstrumentActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 
+    <string name="long_price">买价</string>
+    <string name="short_price">卖价</string>
+    <string name="position">持仓</string>
 
 </resources>
